Aggiornamento libreria con supporto Mapnik 4 e esempio Italia
Modifiche principali:
- ✅ Compatibilità completa con Mapnik 4.1.4
- ✅ Aggiornato CMakeLists.txt per libmapnik e Boost
- ✅ Implementazione corretta API Mapnik 4 (geometry, symbolizer)
- ✅ Nuovo esempio italy_map.cpp con mappa dettagliata Italia
- ✅ Script download_geodata.sh per scaricare shapefile Natural Earth
- ✅ Supporto shapefile: confini, coste, laghi, fiumi
- ✅ Esempio con 13 città italiane e percorso Roma-Milano
- ✅ Aggiornato simple_map.cpp con punti di riferimento
- ✅ Gestione errori migliorata con try-catch
- ✅ Aggiornato .gitignore per escludere dati geografici

Test eseguiti:
- Compilazione: OK (libioc_earth.dylib)
- simple_map: OK (3.2 KB)
- gps_track: OK (18 KB, tracciato Roma-Firenze)
- italy_map: OK (148 KB, mappa completa con shapefile)

Note:
- Text symbolizer temporaneamente semplificato (solo markers)
- Percorsi font e datasources ottimizzati per macOS/Homebrew

--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,13 @@ gps_track
 docs/html/
 docs/latex/
 
-# Data files (opzionale, rimuovi se vuoi versionare i dati)
-# data/*.shp
-# data/*.shx
-# data/*.dbf
-# data/*.prj
+# Data files - shapefile scaricati (usare download_geodata.sh per riscaricarli)
+data/*.shp
+data/*.shx
+data/*.dbf
+data/*.prj
+data/*.cpg
+data/*.zip
+data/*.html
+data/*.txt
+data/VERSION.txt
