Aggiunta API per visualizzazione occultazioni asteroidali
- Creata classe OccultationRenderer per rendering eventi occultazione
- Parser JSON per dati compatibili con IOCalc
- Rendering linea centrale percorso ombra (rosso)
- Rendering limiti 1-sigma nord/sud (arancione)
- Time markers lungo il percorso con label UTC
- Stazioni osservazione con stato (positive/negative/clouded/planned)
- Calcolo automatico estensione mappa da dati occultazione
- Esempio completo occultation_map.cpp
- File dati esempio chariklo_occultation.json
- Integrazione shapefile Natural Earth per sfondo geografico
- Documentazione completa in README.md
- Testato con occultazione Chariklo del 2024-06-03

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,10 +44,12 @@ add_compile_options(
 # Definisci la libreria
 set(LIBRARY_SOURCES
     src/MapPathRenderer.cpp
+    src/OccultationRenderer.cpp
 )
 
 set(LIBRARY_HEADERS
     include/MapPathRenderer.h
+    include/OccultationRenderer.h
 )
 
 # Crea la libreria
