Aggiunte funzionalità export HTML e buffer PNG
Nuove API per OccultationRenderer:
- renderToBuffer(): genera PNG in std::vector<uint8_t> per uso programmatico
- exportToHTML(): crea pagina HTML completa con immagine embedded base64
- getLastRenderedImageBase64(): ottiene ultima immagine in formato base64

Funzionalità HTML export:
- Design moderno e responsivo con CSS
- Informazioni evento in card strutturata (ID, asteroide, stella, data/ora, durata, magnitudine)
- Immagine mappa embedded in base64 (no file esterni)
- Legenda interattiva con colori delle linee
- Footer con credits IOC_Earth

Funzionalità buffer PNG:
- Rendering diretto in memoria senza file temporanei
- Buffer cache per riuso dell'ultima immagine
- Supporto base64 encoding integrato
- Ideale per: API HTTP, database storage, network transmission

Nuovo esempio occultation_html.cpp:
- Test completo export HTML
- Test rendering to buffer
- Test base64 encoding
- Salvataggio buffer su file
- Output: occultation_report.html (118KB con immagine embedded)

Aggiornato README.md con:
- Documentazione nuovi metodi API
- Esempi d'uso per ogni funzionalità
- Casi d'uso pratici (HTTP API, JSON, database)

Testato con successo: HTML generato correttamente, buffer 79KB, base64 105K caratteri

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -16,7 +16,11 @@ target_link_libraries(italy_map PRIVATE ioc_earth)
 add_executable(occultation_map occultation_map.cpp)
 target_link_libraries(occultation_map PRIVATE ioc_earth)
 
+# Esempio con export HTML occultazione
+add_executable(occultation_html occultation_html.cpp)
+target_link_libraries(occultation_html PRIVATE ioc_earth)
+
 # Installa gli esempi (opzionale)
-install(TARGETS simple_map gps_track italy_map occultation_map
+install(TARGETS simple_map gps_track italy_map occultation_map occultation_html
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}/ioc_earth_examples
 )
