--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -20,7 +20,11 @@ target_link_libraries(occultation_map PRIVATE ioc_earth)
 add_executable(occultation_html occultation_html.cpp)
 target_link_libraries(occultation_html PRIVATE ioc_earth)
 
+# Esempio di utilizzo API per app chiamante
+add_executable(api_usage_demo api_usage_demo.cpp)
+target_link_libraries(api_usage_demo PRIVATE ioc_earth)
+
 # Installa gli esempi (opzionale)
-install(TARGETS simple_map gps_track italy_map occultation_map occultation_html
+install(TARGETS simple_map gps_track italy_map occultation_map occultation_html api_usage_demo
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}/ioc_earth_examples
 )
