Aggiunta FinderChartRenderer per carte di avvicinamento astronomiche
- Sfondo bianco per stampa
- Stelle catalogo SAO con numeri identificativi
- Linee e confini costellazioni configurabili
- Target evidenziato con traiettoria asteroide
- Sistema coordinate celesti RA/Dec
- Esempio completo finder_chart.cpp testato (output 9.7KB)
- Documentazione completa in README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,11 +45,13 @@ add_compile_options(
 set(LIBRARY_SOURCES
     src/MapPathRenderer.cpp
     src/OccultationRenderer.cpp
+    src/FinderChartRenderer.cpp
 )
 
 set(LIBRARY_HEADERS
     include/MapPathRenderer.h
     include/OccultationRenderer.h
+    include/FinderChartRenderer.h
 )
 
 # Crea la libreria
