Test Asteroid 17030 Finder Chart (26-29 Nov 2025)
- Dati JSON con traiettoria reale dell'asteroide
- 12 stelle SAO nella regione di Aries
- 5 linee costellazioni + confine
- Traiettoria dell'asteroide dal 26 al 29 novembre 2025
- 7 punti con timestamp ogni 12 ore
- Campo visivo 8° centrato su RA 45.678° Dec 12.345°
- Test completo con output PNG di 12KB

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -28,7 +28,11 @@ target_link_libraries(api_usage_demo PRIVATE ioc_earth)
 add_executable(finder_chart finder_chart.cpp)
 target_link_libraries(finder_chart PRIVATE ioc_earth)
 
+# Test Asteroid 17030 (26-29 Nov 2025)
+add_executable(test_17030 test_17030.cpp)
+target_link_libraries(test_17030 PRIVATE ioc_earth)
+
 # Installa gli esempi (opzionale)
-install(TARGETS simple_map gps_track italy_map occultation_map occultation_html api_usage_demo finder_chart
+install(TARGETS simple_map gps_track italy_map occultation_map occultation_html api_usage_demo finder_chart test_17030
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}/ioc_earth_examples
 )
