Aggiunta SkyMapRenderer - Mappe celesti astronomiche professionali
Nuova classe SkyMapRenderer per generare mappe del cielo di alta qualità:

✨ Caratteristiche:
- Sfondo bianco perfetto per stampa astronomica
- Stelle SAO con numeri identificativi
- Linee asterismi delle costellazioni (blu)
- Confini ufficiali IAU delle costellazioni (verde)
- Target evidenziato (rosso) con traiettoria (arancione)
- Rettangolo tratteggiato per indicare il FOV del finder chart
- Griglia di coordinate RA/Dec
- Stile altamente configurabile

📦 Implementazione:
- SkyMapRenderer backend su MapPathRenderer (Mapnik)
- Strutture dati: StarData, ConstellationLineData, ConstellationBoundaryData, TargetData
- Stile configurabile: SkyMapStyle con colori, dimensioni e visibilità

🧪 Test:
- test_skymap.cpp: Genera mappa di Aries con Asteroid 17030
- Output: skymap_17030.png (1200x1200 px, 18KB)
- Rettangolo FOV visibile sulla mappa per ingrandimento

💾 File aggiunto:
- include/SkyMapRenderer.h (186 linee)
- src/SkyMapRenderer.cpp (228 linee)
- examples/test_skymap.cpp (demo completa)
- CMakeLists.txt aggiornato
- examples/CMakeLists.txt aggiornato

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,12 +46,14 @@ set(LIBRARY_SOURCES
     src/MapPathRenderer.cpp
     src/OccultationRenderer.cpp
     src/FinderChartRenderer.cpp
+    src/SkyMapRenderer.cpp
 )
 
 set(LIBRARY_HEADERS
     include/MapPathRenderer.h
     include/OccultationRenderer.h
     include/FinderChartRenderer.h
+    include/SkyMapRenderer.h
 )
 
 # Crea la libreria
